# trader-lifecycle-model

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: config.py
src/features/: behavioral_features.py  pipeline.py  portfolio_features.py  risk_features.py
src/ingestion/: market_data.py  portfolio_snapshots.py  schema.py
tests/: test_config.py  test_features.py  test_market_data.py  test_portfolio_snapshots.py
