[project]
name = "trader-lifecycle-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "httpx>=0.28.1",
    "lifelines>=0.30.3",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "mlflow>=3.14.0",
    "numba>=0.56",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pandera>=0.32.0",
    "pyarrow>=24.0.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "shap>=0.49.1",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
